games of tournament wrap bug fixed

--- a/src/containers/HomePage/TournamentPage/GameBox/GameBox.scss
+++ b/src/containers/HomePage/TournamentPage/GameBox/GameBox.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
-  width: 100%;
+  flex: 1;
   padding: 0.5rem;
   border-radius: 10px;
   .match-game-header {
@@ -18,6 +18,7 @@
       transform: translateX(-50%);
       border-bottom-left-radius: 15px;
       border-bottom-right-radius: 15px;
+      font-size: clamp(0.8rem, 1vw, 1rem);
       padding: 0.3em 1em;
     }
     .match-game-number {
@@ -102,6 +103,7 @@
 
 @media only screen and (min-width: 580px) {
   .match-game {
+    max-width: 600px;
     .match-game-details {
       gap: 0.5rem;
       .game-detail-section {
