--- a/src/containers/HomePage/TournamentPage/TournamentParts/Games/Games.scss
+++ b/src/containers/HomePage/TournamentPage/TournamentParts/Games/Games.scss
@@ -64,8 +64,9 @@
   }
   .games-wrapper {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
-    margin: 1rem auto;
+    margin: 1rem 0;
   }
 }
